--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -6,11 +6,23 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-
-  width: 25%;
+  width: 20%;
   margin: 0 auto;
 }
 
 .form input {
   margin: 10px 0;
+}
+
+.team {
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-content: space-around;
+  margin: 50px;
+  font-size: 95%;
+}
+
+.team div {
+  width: 30%;
 }
