--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 20%;
+  width: 300px;
   margin: 0 auto;
 }
 
@@ -25,4 +25,39 @@
 
 .team div {
   width: 30%;
+}
+
+input,
+textarea {
+  padding: 15px 22px;
+  font-size: 16px;
+  margin: 10px 5px;
+  box-sizing: border-box;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+button {
+  background: white;
+  border: 1px solid black;
+  padding: 10px 15px;
+  font-size: 16px;
+  color: black;
+  box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.12),
+    0 2px 2px 1px rgba(0, 0, 0, 0.24);
+  transition: all 0.2 ease-in;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.12),
+    0 2px 3px 2px rgba(0, 0, 0, 0.24);
+  background: black;
+  color: white;
+}
+button:active {
+  background: black;
+  border-radius: 4px;
+  outline: none;
 }
